<resources>
    <string name="app_name">My Uae Guide</string>
    <string name="logo_name">My\nUae Guide</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by_line">Powered By Tammam Khalaf</string>
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or some things and want to be a part of our growing industry then add your place by following simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="Banks">Banks</string>
    <string name="Airports">Airports</string>
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_descriptions">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="Categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="rate_us">Rate Us</string>
    <string name="banks">Banks</string>
    <string name="car_rent">Car Rent</string>
    <string name="expand_all">EXPAND ALL</string>
    <string name="hospitals">Hospitals</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password!</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_username">ENTER USERNAME</string>
    <string name="enter_email">ENTER EMAIL</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online serviceApi!</string>
    <string name="how_we_work">How We Work!</string>
    <string name="sign_up">Sign Up</string>
    <string name="otp_description_text">Code</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="todo" translatable="false">todo</string>
    <string name="verify_code">Verify Code</string>
    <string name="forget_password_detail">Provide Your Account\'s Phone Number For\n Which You Want To\n Reset Your Password</string>
    <string name="make_selection">Make Selection</string>
    <string name="make_selection_detail">Select Which Contact Detail Should We Use To Reset Your Password!</string>
    <string name="via_sms">Via SMS</string>
    <string name="via_mail">Via Email</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_success_message">Your Password Has Been Updated!</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Your Identity Has Been Verified!\nSet Your New Password</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Empty_Field">Field can not be empty</string>
    <string name="UserNameLarge">Username is too large!</string>
    <string name="NoWhiteSpaces">No White spaces are allowed!</string>
    <string name="InvalidEmail">Invalid Email!</string>
    <string name="PasswordStrenght">Enter At least 8 chars Upper case, Lower case, digits, special chars</string>
    <string name="SelectGender">Please Select Gender</string>
    <string name="NotAllowed">You are not eligible to apply</string>
    <string name="EnterValidPhoneNo">Enter valid phone number</string>
    <string name="NoSuchUser">No Such user Exist!</string>
    <string name="PasswordDoesntMatch">Password Doesn\'t Match</string>
    <string name="ConnectInternet">Please Connect To The Internet to connect further!</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Company</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="dashboard">Dashboard</string>
    <string name="manage">Manage</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="share">Share</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="manage_fragment">Manage Fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="education">Education</string>
    <string name="hospital">HOSPITAL</string>
    <string name="restaurant">Restaurant</string>
    <string name="shopping">Shopping</string>
    <string name="transport">Transport</string>
    <string name="title_activity_show_featured_place" translatable="false" />
    <string name="nav_favorite">Favorite</string>
    <string name="Settings">Settings</string>
</resources>